--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ scripts/RELEASE-VERSION
 /scripts/testing/hub_ctrl
 /scripts/testing/bootload_log*
 
+# Eclipse project file
+.project
+.cproject
+.pydevproject
+.settings/
+
